[tool.poetry]
name = "hierarchy_utils"
version = "0.1.3"
description = "Utilities for working with hierarchical data structures."
readme = "README.org"
license = "MIT"
homepage = "https://github.com/joefromct/py-hierarchy-utils"
authors = []
packages = [{include = "hierarchy_utils"}]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"




